<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:padding="70dp"
	android:orientation="vertical"
	xmlns:android="http://schemas.android.com/apk/res/android">
<ImageView
	android:id="@+id/main_menu_pic"
	android:src="@drawable/ic_launcher"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content"
	android:layout_marginTop="20dp"
	android:layout_marginBottom="20dp"
	android:layout_marginLeft="20dp"
	android:layout_marginRight="20dp"
	android:layout_gravity="center_horizontal" />
<Button
	android:id="@+id/main_menu_start_btn"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_start_btn" />
<Button
	android:id="@+id/main_menu_stop_btn"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_stop_btn" />
<Button
	android:id="@+id/main_menu_locations_btn"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_locations_btn" />
<Button
	android:id="@+id/main_menu_map_btn"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_map_btn" />
<TextView android:id="@+id/main_menu_lon"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_longitude_ind" />
<TextView android:id="@+id/main_menu_lat"
    android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="5dp"
	android:layout_marginBottom="5dp"
	android:text="@string/main_menu_latitude_ind" />
</LinearLayout>
